Color Palettes Exercise
08/14

--- a/drills/basic-css-drills/css/drill.css
+++ b/drills/basic-css-drills/css/drill.css
@@ -69,10 +69,10 @@
 }
 /* Drill 10 - Write your code solution below */
 #d10-a1{
-    text-decoration: solid;
+    text-decoration: none;
 }
 #d10-a3{
-    text-decoration: solid;
+    text-decoration: none;
 }
 #d10-s1{
     text-decoration: underline;
