--- a/z-css/about.css
+++ b/z-css/about.css
@@ -2,27 +2,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Urbanist:wght@200&display=swap');
 
 /* Paragraph */
-.about {
-    float: left;
-    width: 45%;
+
+
+.about{
+    float: right;
     padding: 40px;
     padding-left:70px;
     padding-right: 70px;
     height: 475px;
-    margin:30px;
-    margin-right:30px;
-    margin-bottom: 70px;
     background-color: lightgrey;
     line-height:2;
     display: inline-block;
+}
+#about-paragraph{
+    margin-left: 170px;
 }
 
 h1{
     font-family:'Abril Fatface', cursive;
 }
 
-.imageofme img{
-    display: inline-block;
-    height: 200px;
-    
+img{
+    height: 200px; 
 }
