--- a/exercises/license/css/style.css
+++ b/exercises/license/css/style.css
@@ -6,3 +6,85 @@
 
     Good luck, and have fun!
 */
+/* Reset default margins and paddings */
+
+h1{
+    color: blue;
+}
+h4{
+    color: white;
+    background-color: blue;
+    text-align: center;
+}
+span{
+    color: red;
+}
+#id-and-expiration div{
+    color: blue;
+}
+#license {
+    width: 600px;
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 20px;
+    margin: 0 auto;
+  }
+  
+  #content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    display: inline-block;
+  }
+  
+  #left-side {
+    flex: 1;
+    padding-right: 20px;
+    display: inline-block;
+  }
+  
+  #right-side {
+    flex: 1;
+    text-align: right;
+    display: inline-block;
+  }
+  #small-pic img{
+    width: 60px;
+    opacity: .5;
+    display: inline-block;
+  }
+  
+  #right-side img {
+    width: 200px ;
+    display: block;
+    margin: 0 auto;
+  }
+  
+  #donor-and-real-id {
+    display: flex;
+    margin-top: 10px;
+  }
+  
+  #donor,  #real-id {
+    font-size: 14px;
+    
+  }
+  
+  #data-fields {
+    display: flex;
+    justify-content: space-between;
+    display: inline-block;
+  }
+  
+  #data-left, #data-right {
+    flex: 1;
+    margin: 5px;
+    display: inline-block;
+  }
+  
+  #signature {
+    margin-top: 20px;
+    font-style: italic;
+    display: inline-block;
+  }
+    
