--- a/z-css/about.css
+++ b/z-css/about.css
@@ -2,20 +2,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Urbanist:wght@200&display=swap');
 
 /* Paragraph */
+#about{
+    background-color: lightgrey;
+}
 
-
-.about{
-    float: right;
+.about-text{
     padding: 40px;
     padding-left:70px;
     padding-right: 70px;
-    height: 475px;
-    background-color: lightgrey;
-    line-height:2;
+    width: 75%;
+    line-height: 1.5;
     display: inline-block;
-}
-#about-paragraph{
-    margin-left: 170px;
 }
 
 h1{
@@ -23,5 +20,6 @@ h1{
 }
 
 img{
-    height: 200px; 
+    height: 200px;
+    display: inline-block;
 }
