--- a/exercises/license/css/style.css
+++ b/exercises/license/css/style.css
@@ -28,6 +28,7 @@ span{
     border-radius: 20px;
     padding: 20px;
     margin: 0 auto;
+    background-color: rgb(241, 172, 80);
   }
   
   #content {
