--- a/exercises/wikipage-3/css/main.css
+++ b/exercises/wikipage-3/css/main.css
@@ -160,6 +160,9 @@ tr:hover {
     margin-top: 10px;
     margin-bottom: 2px;
   }
+  #players h3 span{
+    margin-bottom: 0;
+  }
  #organization h3{
     margin-top: 10px;
     margin-bottom: 2px;
