--- a/exercises/wikipage-3/css/main.css
+++ b/exercises/wikipage-3/css/main.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;500&family=Philosopher&family=Poppins:wght@300;400;500;600;700&display=swap');
 /* Reset some default styles */
 body, h1, h2, p, ul, li {
   margin: 0;
@@ -33,39 +34,45 @@ body, h1, h2, p, ul, li {
   box-sizing: border-box;
 }
 
-body {
-  font-family: Arial, sans-serif;
-}
 .logo img {
   max-width: 75px;
-
 }
+
 header, nav, main, footer {
   margin: 20px;
 }
+
 p.indent {
   text-indent: 30px;
 }
+
 header h1 {
   font-size: 36px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
 }
 
 h2 {
   font-size: 26px;
   margin-top: 10px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
 }
+
 h3{
   font-size: 20px;
   margin-top: 2px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
 }
 
 hr{
   margin-top: 0px;
 }
-main p {
-  margin-bottom: 20px;
-}
+
 p {
+  font-family: 'Merriweather', serif;
+  font-weight: 400;
   font-size: 18px;
 }
 
@@ -79,6 +86,7 @@ footer {
 body, table {
   margin: 0;
   padding: 0;
+  font-family: 'Merriweather', serif;
 }
 
 body {
@@ -92,13 +100,14 @@ body {
   border-collapse: collapse;
   border: 1px solid #ccc;
 }
-.table-container-2 table {
-    width: 45%;
+.table-org table {
+    width: 50%;
     border-collapse: collapse;
     border: 1px solid #ccc;
   }
-  .table-container-3 table {
-    width: 45%;
+  .table-achievements table {
+  
+    width: 55%;
     border-collapse: collapse;
     border: 1px solid #ccc;
   }
