--- a/z-css/contact.css
+++ b/z-css/contact.css
@@ -73,3 +73,48 @@ footer {
   text-align: center;
   padding: 1rem;
 }
+
+
+
+
+/* Reset default browser styles */
+body, h1, ul {
+  margin: 0;
+  padding: 0;
+}
+
+/* navigation bar */
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.logo a {
+  text-decoration: none;
+  color: #000000;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+}
+
+.nav-links li {
+  margin: 0 15px;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: #000000;
+  font-weight: bold;
+  transition: color 0.3s;
+}
+
+.nav-links a:hover {
+  color: #111e46;
+}
