--- a/z-css/gallery.css
+++ b/z-css/gallery.css
@@ -1,3 +1,14 @@
+*{
+  font-family: Arial, sans-serif;
+}
+/*Header*/
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0;
+    text-align: center;
+}
+
 /* navigation bar */
 
 .navbar {
@@ -34,16 +45,42 @@
     color: #111e46;
   }
 
-/*Header*/
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 10px 0;
-  text-align: center;
-}
-
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+}
+
+.gallery {
+  justify-content: center;
+  display: grid;
+  grid-template-columns: 20% 20% 20%;
+  grid-gap: 20px;
+  margin: 20px;
+}
+
+
+.portfolio-item {
+  background-color: #f0f0f0;
+  padding: 20px;
+  margin: 10px;
+  width: 300px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+.portfolio-item a{
+  text-decoration: none;
+  color: #000000;;
+}
+
+.portfolio-item img {
+  max-width: 100%;
+  height: auto;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
 }
