--- a/z-portfolio/portfolio.css
+++ b/z-portfolio/portfolio.css
@@ -3,57 +3,84 @@
   }
   /*Header*/
   header {
-      background-color: #333;
-      color: #fff;
-      padding: 10px 0;
-      text-align: center;
-  }
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
+}
   
   /* navigation bar */
   
-  .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0 20px;
-    }
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
     
-    .logo a {
-      text-decoration: none;
-      color: #000000;
-      font-size: 24px;
-      font-weight: bold;
-    }
+.logo a {
+  text-decoration: none;
+  color: #000000;
+  font-size: 24px;
+  font-weight: bold;
+}
     
-    .nav-links {
-      list-style: none;
-      display: flex;
-    }
+.nav-links {
+  list-style: none;
+  display: flex;
+}
     
-    .nav-links li {
-      margin: 0 15px;
-    }
+.nav-links li {
+  margin: 0 15px;
+}
     
-    .nav-links a {
-      text-decoration: none;
-      color: #000000;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
+.nav-links a {
+  text-decoration: none;
+  color: #000000;
+  font-weight: bold;
+  transition: color 0.3s;
+}
     
-    .nav-links a:hover {
-      color: #111e46;
-    }
+.nav-links a:hover {
+  color: #111e46;
+}
   
-    footer {
-      background-color: #333;
-      color: #fff;
-      text-align: center;
-      padding: 10px;
-    }
+.project {
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  text-align: center;
+  padding: 20px;
+}
+
+.project-details {
+  padding: 20px;
+}
+
+.photo-gallery {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.gallery-item img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+}
   
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
