--- a/z-css/photo.css
+++ b/z-css/photo.css
@@ -61,7 +61,7 @@
   }
   
   .category.active {
-      background-color: #708F96; /* Active category color */
+      background-color: #708F96;
   }
   
   main {
@@ -83,7 +83,6 @@
       overflow: hidden;
       box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
       cursor: pointer;
-      transition: transform 0.2s;
       width: 300px;
       height: 200px;
   }
@@ -93,46 +92,58 @@
       height: auto;
   }
   
-  .thumbnails {
+  .carousel-container {
       display: flex;
-      justify-content: center;
-      gap: 20px;
-      padding: 20px;
+      flex-direction: column;
+      align-items: center;
+      margin: 20px;
   }
   
-  .thumbnail {
+  #prev-button,
+  #next-button {
+      background-color: #333;
+      color: #fff;
+      padding: 10px 20px;
+      border: none;
       border-radius: 5px;
-      overflow: hidden;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
       cursor: pointer;
-      width: 100px;
-      height: 67px;
+      font-size: 16px;
+      margin-bottom: 10px;
   }
   
-  .thumbnail img {
+  .carousel {
+      display: flex;
+      overflow: hidden;
+      width: 300px;
       max-width: 100%;
+  }
+  
+  .carousel img {
+      width: 100%;
       height: auto;
   }
-
-  /* Styles for image enlargement */
-
-.enlarged-image-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 999;
-}
-
-.enlarged-image {
-  max-width: 90%;
-  max-height: 90%;
-}
+  
+  .footer {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+  }
+  
+  .fullscreen-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+  }
+  
+  #fullscreen-toggle {
+      background-color: #333;
+      color: #fff;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+  }
     
     /* Footer */
 footer {
