--- a/z-portfolio/portfolio.css
+++ b/z-portfolio/portfolio.css
@@ -3,47 +3,49 @@
   }
   /*Header*/
   header {
-  background-color: #333;
-  color: #fff;
-  padding: 10px 0;
-  text-align: center;
-}
+      background-color: #333;
+      color: #fff;
+      padding: 10px 0;
+      text-align: center;
+  }
   
   /* navigation bar */
   
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 20px;
-}
+  .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 20px;
+    }
     
-.logo a {
-  text-decoration: none;
-  color: #000000;
-  font-size: 24px;
-  font-weight: bold;
-}
+    .logo a {
+      text-decoration: none;
+      color: #000000;
+      font-size: 24px;
+      font-weight: bold;
+    }
     
-.nav-links {
-  list-style: none;
-  display: flex;
-}
+    .nav-links {
+      list-style: none;
+      display: flex;
+    }
     
-.nav-links li {
-  margin: 0 15px;
-}
+    .nav-links li {
+      margin: 0 15px;
+    }
     
-.nav-links a {
-  text-decoration: none;
-  color: #000000;
-  font-weight: bold;
-  transition: color 0.3s;
-}
+    .nav-links a {
+      text-decoration: none;
+      color: #000000;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
     
-.nav-links a:hover {
-  color: #111e46;
-}
+    .nav-links a:hover {
+      color: #111e46;
+    }
+
+/* Project Part */
   
 .project {
   display: flex;
@@ -72,6 +74,7 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
+/* Footer */
 footer {
   background-color: #333;
   color: #fff;
@@ -79,8 +82,3 @@ footer {
   padding: 10px;
 }
   
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
