--- a/z-css/gallery.css
+++ b/z-css/gallery.css
@@ -70,6 +70,7 @@ header {
   max-width: 100%;
   height: auto;
   border-radius: 2px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.062);
 }
 
 /* Footer */
