--- a/z-css/about.css
+++ b/z-css/about.css
@@ -1,91 +1,52 @@
-/* Google Fonts */
-*{
-  font-family: Arial, sans-serif;
-}
-/*Header*/
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
-    text-align: center;
+.about {
+  padding: 40px;
+  display: flex;
+  align-items: flex-start;
+  text-align: center;
+  margin-top: 120px;
+  margin-bottom: 70px;
 }
 
-/* navigation bar */
-
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
-  }
-  
-  .logo a {
-    text-decoration: none;
-    color: #000000;
-    font-size: 24px;
-    font-weight: bold;
-  }
-  
-  .nav-links {
-    list-style: none;
-    display: flex;
-  }
-  
-  .nav-links li {
-    margin: 0 15px;
-  }
-  
-  .nav-links a {
-    text-decoration: none;
-    color: #000000;
-    font-weight: bold;
-    transition: color 0.3s;
-  }
-  
-  .nav-links a:hover {
-    color: #111e46;
-  }
-  
-/* Paragraph */
-body {
-    margin: 0;
-    padding: 0;
+.about-card {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+  padding: 20px;
+  flex: 1;
+  text-align: center;
 }
 
-.container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 3rem;
+.about-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s, box-shadow 0.2s;
 }
 
-.profile-image img {
-    height: 250px;
-    object-fit: cover;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.151);
+.about-image {
+  flex: 1; 
 }
 
-.profile-content {
-    padding: 10px;
-    max-width: 600px;
+.about-image img {
+  max-width: 30%;
+  border-radius: 10px;
 }
 
-h2 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+.about-content {
+  flex: 2;
+  margin-left: 20px;
+  text-align: left;
+  display: flex; 
+  flex-direction: column;
+  align-items: center; 
 }
 
-ul {
-    list-style: disc;
-    margin-left: 1.5rem;
+.about-content h1 {
+  font-size: 36px;
+  margin-bottom: 20px;
 }
 
-a {
-    color: #333;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-a:hover {
-    color: #f44;
+.about-content p {
+  font-size: 16px;
+  line-height: 1.5;
+  color: #333;
 }
