--- a/exercises/foxtail-farms/css/parts.css
+++ b/exercises/foxtail-farms/css/parts.css
@@ -9,8 +9,7 @@ body {
 
 /* Style the navigation bar */
 .navbar {
-    background-color: #0000002f; /* Change the background color as desired */
-    display: flex;
+    background-color: #0000002f; 
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
@@ -51,8 +50,8 @@ body {
 
 /* Style the footer */
 .footer {
-    background-color: #E1A177; /* Change the background color as desired */
-    color: #fff; /* Change the text color as desired */
+    background-color: #E1A177;
+    color: #fff;
     padding: 30px;
     display: flex;
     flex-wrap: wrap;
@@ -64,15 +63,14 @@ body {
 .footer-left,
 .footer-middle,
 .footer-right {
-    flex-basis: calc(33.33% - 10px); /* Create three equal-width columns with a small gap */
-    margin-right: 10px; /* Add a small gap between columns */
+    flex-basis: calc(33.33% - 10px);
+    margin-right: 10px; 
 }
 
 /* Style the bordered rectangle around logo and copyright */
 .bordered-rectangle {
     margin: 0;
-
-    background-color: #ffffff80;
+    background: linear-gradient(90deg, #fff 50%, #fff 50%, #ffffff 70%, #0000001e 70%);
     width: 10px;
     flex-direction: column;
     justify-content:space-between
@@ -80,7 +78,7 @@ body {
 
 /* Style the logo in the footer */
 .footer-logo img {
-    max-height: 60px; /* Adjust the logo height as needed */
+    max-height: 60px; 
 }
 
 /* Style the navigation links in the footer */
@@ -96,7 +94,7 @@ body {
 
 .nav-links a {
     text-decoration: none;
-    color: #fff; /* Change the link text color as desired */
+    color: #fff; 
 }
 
 /* Style the social media links in the footer */
@@ -108,7 +106,7 @@ body {
 }
 
 .social-links li {
-    margin-right: 10px; /* Adjust the spacing between social media icons as needed */
+    margin-right: 10px;
 }
 
 /* Style the subscribe bar in the footer */
@@ -125,13 +123,13 @@ body {
     padding: 10px;
     border: none;
     border-radius: 5px;
-    margin-right: 10px; /* Adjust the spacing between input and button as needed */
+    margin-right: 10px;
     flex-grow: 1;
 }
 
 .footer-subscribe button {
-    background-color: #ff5733; /* Change the button color as desired */
-    color: #fff; /* Change the button text color as desired */
+    background-color: #ff5733; 
+    color: #fff; 
     border: none;
     border-radius: 5px;
     padding: 10px 20px;
