--- a/exercises/foxtail-farms/css/parts.css
+++ b/exercises/foxtail-farms/css/parts.css
@@ -9,6 +9,7 @@ body {
 
 /* Nav Bar */
 .navbar {
+    margin-top: 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
