--- a/exercises/foxtail-farms/css/index.css
+++ b/exercises/foxtail-farms/css/index.css
@@ -143,12 +143,14 @@
     flex-basis: 30%;
     text-align: right; 
     margin-right: 90px;
+    
 }
 
 .image img {
     max-width: 60%;
     height: auto;
     border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 /* Section 4: Recipe Cards */
@@ -216,6 +218,7 @@
 .bottom-image img {
     max-width: 70%;
     height: auto;
+    border-radius: 5px;
 }
 
 .another-header h1 {
