--- a/exercises/foxtail-farms/css/market.css
+++ b/exercises/foxtail-farms/css/market.css
@@ -17,7 +17,7 @@
 /* Style the header description */
 .page-header p {
     margin: 10px 0;
-    font-size: 1rem;
+    font-size: 24px;
 }
 
 /* Style the product gallery */
