--- a/exercises/foxtail-farms/css/parts.css
+++ b/exercises/foxtail-farms/css/parts.css
@@ -8,7 +8,7 @@ body {
 }
 
 /* Nav Bar */
-.navbar {
+.navbar-content {
     margin-top: 40px;
     display: flex;
     justify-content: space-between;
