--- a/exercises/foxtail-farms/css/index.css
+++ b/exercises/foxtail-farms/css/index.css
@@ -19,6 +19,7 @@
 
 .welcome-content p {
     font-size: 1.2rem;
+    font-size: 24px;
 }
 
 .welcome-header .btn {
@@ -131,6 +132,7 @@
 .section-content p {
     font-size: 1rem;
     color: #666;
+    font-size: 24px;
 }
 
 .section-content .btn {
@@ -236,4 +238,5 @@
 .another-header p {
     font-size: 1.2rem;
     width: 70%;
+    font-size: 24px;
 }
