--- a/exercises/foxtail-farms/css/science.css
+++ b/exercises/foxtail-farms/css/science.css
@@ -1,5 +1,10 @@
+.top-square{
+    padding: 10px 10px 10px 10px;
+}
+
 .navbar{
     background-color: #e1a17769;
+    padding: 1px 0 0 0;
 }
 
 /* Section 1: Our Technology */
