--- a/exercises/foxtail-farms/css/parts.css
+++ b/exercises/foxtail-farms/css/parts.css
@@ -14,7 +14,6 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: #0000002f;
-    padding: 0 20px 0 10px;
     color: #fff;
 }
 
@@ -76,6 +75,16 @@ body {
 }
 
 /* Logo left column */
+.light-box{
+    position: absolute;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 32px;
+    background-color: var(--color-white);
+    width: 169px;
+    opacity: 0.44
+}
 .footer-logo img {
     max-width: 20%;
     height: auto;
