--- a/exercises/foxtail-farms/css/science.css
+++ b/exercises/foxtail-farms/css/science.css
@@ -1,10 +1,22 @@
 .top-square{
-    padding: 10px 10px 10px 10px;
+    position: relative;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
 }
 
 .navbar{
     background-color: #e1a17769;
-    padding: 1px 0 0 0;
+    position: absolute;
+    width: 95%;
+    height: 95%;
+    top: 2%;
+}
+
+nav{
+    display: block;
 }
 
 /* Section 1: Our Technology */
