--- a/exercises/noir-rebellion/css/main.css
+++ b/exercises/noir-rebellion/css/main.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 /* Reset some default styles */
 body, ul {
     margin: 0;
@@ -13,11 +14,19 @@ body, ul {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
+    position: relative;
+    z-index: 2;
+    margin-top: 2%;
 }
 
 .brand {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 40px;
+    font-family: 'Bebas Neue', sans-serif;
+}
+
+.brand a {
+    text-decoration: none;
+    color: white;
 }
 
 .nav-links {
@@ -58,118 +67,6 @@ body, ul {
     border: 1px solid #ddd;
     padding: 10px;
 }
-
-/* Hero section styles */
-.hero {
-    margin: 0 2% 0 2%;
-    position: relative;
-    height: 400px;
-    overflow: hidden;
-}
-
-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.hero-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: white;
-}
-
-.hero h1 {
-    font-size: 36px;
-    margin-bottom: 20px;
-}
-.jewelry-btn {
-    background-color: #000000;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    margin: 10px;
-    cursor: pointer;
-}
-
-.learn-more-btn {
-    background-color: transparent;
-    color: white;
-    border: 3px solid #ffffff;
-    padding: 10px 20px;
-    border: none;
-    margin: 10px;
-    cursor: pointer;
-}
-
-/* Best Sellers Styles */
-.best-sellers {
-    text-align: center;
-    margin: 30px 0;
-}
-
-.best-sellers h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
-}
-
-.card-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
-.card {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 20px;
-    width: calc(25% - 20px); 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-.card img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 10px;
-}
-
-.card h3 {
-    font-size: 18px;
-    margin: 10px 0;
-}
-
-.card p {
-    font-weight: bold;
-    color: #ff5733;
-}
-
-.reviews {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.stars {
-    font-size: 18px;
-    color: #ff5733;
-    margin-right: 5px;
-}
-
-.review-count {
-    font-size: 14px;
-    color: #777;
-}
-
-
 
 /* Footer Styles */
 .footer {
