--- a/exercises/noir-rebellion/css/index.css
+++ b/exercises/noir-rebellion/css/index.css
@@ -2,7 +2,7 @@
 .hero {
     margin: -4.5% 2% 0 2%;
     position: relative;
-    height: 800px;
+    height: 900px;
     overflow: hidden;
     z-index: 1; 
 }
@@ -128,4 +128,64 @@ video {
 .review-count {
     font-size: 12px; 
     color: #777;
+}
+
+@media screen and (max-width: 768px) {
+
+    /* Hero section styles */
+    .hero {
+        margin: -4.5% 0 0 0;
+        height: 600px;
+    }
+
+    .hero h1 {
+        font-size: 24px;
+    }
+
+    .jewelry-btn, .learn-more-btn {
+        padding: 8px 16px;
+        margin: 8px;
+    }
+
+    /* Best Sellers Styles */
+    .best-sellers h2 {
+        font-size: 24px;
+    }
+
+    .card {
+        width: calc(30%);
+        margin: 10px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    /* Hero section styles */
+    .hero {
+        margin: 0;
+        height: 400px;
+    }
+
+    .hero-content {
+        text-align: center;
+    }
+
+    .hero h1 {
+        font-size: 20px;
+    }
+
+    .jewelry-btn, .learn-more-btn {
+        padding: 8px 16px;
+        margin: 8px;
+        font-size: 14px;
+    }
+
+    /* Best Sellers Styles */
+    .best-sellers h2 {
+        font-size: 20px;
+    }
+
+    .card {
+        width: calc(45%);
+        margin: 10px;
+    }
 }
