--- a/exercises/noir-rebellion/css/main.css
+++ b/exercises/noir-rebellion/css/main.css
@@ -200,3 +200,69 @@ body, ul {
     color: white;
     text-decoration: none;
 }
+
+@media screen and (max-width: 768px) {
+    /* Navbar styles */
+    .navbar {
+        padding: 10px;
+    }
+
+    .brand {
+        font-size: 24px;
+    }
+
+    .nav-links li {
+        margin-right: 10px;
+    }
+
+    .icons {
+        font-size: 18px;
+    }
+    
+    /* Footer Style */
+    .footer-content {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .contact-info, .quick-links, .legal-links {
+        text-align: center;
+    }
+
+    .contact-info p {
+        margin-bottom: 15px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    /* Navbar styles */
+    .navbar {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .brand {
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .nav-links {
+        margin-top: 10px;
+        flex-direction: column;
+    }
+
+    .nav-links li {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .icons {
+        margin-top: 10px;
+    }
+
+    /* Footer Style */
+    .footer-content {
+        grid-template-columns: 1fr;
+    }
+}
+
+
