--- a/exercises/noir-rebellion/css/index.css
+++ b/exercises/noir-rebellion/css/index.css
@@ -94,6 +94,12 @@ video {
     width: calc(15%);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
+    transition: transform 0.3s ease-in-out;
+}
+
+.card:hover {
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    transform: scale(1.05);
 }
 
 .card img {
