--- a/exercises/resturant/css/main.css
+++ b/exercises/resturant/css/main.css
@@ -23,8 +23,8 @@ nav {
 }
 
 .logo {
-    display: flex; /* Add display: flex */
-    align-items: center; /* Vertically center elements */
+    display: flex; 
+    align-items: center; 
 }
 
 .logo img {
@@ -33,8 +33,8 @@ nav {
 }
 
 .logo h1 {
-    margin: 0; /* Remove margin to avoid spacing issues */
-    font-size: 24px; /* Adjust font size as needed */
+    margin: 0; 
+    font-size: 24px; 
     font-family: 'Playfair Display', serif;
 }
 
