--- a/exercises/resturant/css/menu.css
+++ b/exercises/resturant/css/menu.css
@@ -25,6 +25,16 @@ nav {
     align-items: center; 
 }
 
+.logo a {
+    text-decoration: none;
+    color: white;
+}
+
+.logo a:hover {
+    text-decoration: none;
+    color: #676C8C;
+}
+
 .logo img {
     height: 60px;
     margin-right: 10px;
@@ -84,50 +94,25 @@ nav {
 }
 
 /* Menu Section styles */
-.menu-section {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+/* Centered Photo styles */
+.centered-photo {
     display: flex;
-    flex-wrap: wrap; 
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh; 
+    background-color: #f5f5f5;
+    max-width: 80%;
+    margin: 2% auto;
 }
 
-.featured-dish {
-    flex: 1;
-    margin: 0 10px;
-    text-align: center;
-}
-
-.featured-dish img {
+.centered-photo img {
+    margin: 5%;
     max-width: 100%;
-    height: auto;
-}
-
-.featured-dish h2 {
-    font-size: 24px;
-}
-
-.price {
-    font-weight: bold;
-    font-size: 20px;
-    margin-top: 10px;
-}
-
-.menu-items {
-    flex: 2; 
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.menu-item {
-    flex: 1;
-    margin: 0 10px;
-    text-align: center;
-    margin-top: 20px;
-}
-
-.menu-item h3 {
-    font-size: 20px;
+    max-height: 100%;
+    display: block;
+    border: 2px solid #333;
+    padding: 10px; 
+    background-color: white;
 }
 
 
